--- a/src/Login.css
+++ b/src/Login.css
@@ -1,6 +1,6 @@
 .Loginbox {
-  max-width: 420px;
-  margin: 50px auto;
+  max-width: 400px;
+  margin: 70px auto;
   background-color: #121212;
   padding: 30px 25px 40px;
   border-radius: 20px;
@@ -8,27 +8,28 @@
   color: #f1f1f1;
   font-family: 'Poppins', sans-serif;
   animation: fadeIn 0.5s ease-in;
+  margin-top: 30%;
 }
 
 .Enter {
   text-align: center;
   color: #6c63ff;
-  font-size: 1.7rem;
+  font-size: 1.8rem;
   font-weight: 600;
   margin-bottom: 25px;
+  margin: 0px auto 25px auto;
 }
 
 .loginForm {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 15px;
 }
 
 .log-lable {
   color: #aaa;
   font-weight: 500;
   font-size: 0.95rem;
-  margin-bottom: 4px;
 }
 
 .input-log {
@@ -49,13 +50,13 @@
 
 .log-button {
   background-color: #6c63ff;
-  color: white;
+  color: #fff;
   border: none;
-  border-radius: 12px;
+  border-radius: 10px;
   padding: 12px;
   font-size: 1rem;
   font-weight: 600;
-  margin-top: 15px;
+  margin-top: 10px;
   transition: 0.3s ease;
   box-shadow: 0 0 12px rgba(108, 99, 255, 0.3);
 }
@@ -66,11 +67,41 @@
   transform: translateY(-1px);
 }
 
+.discribe-log {
+  text-align: center;
+  color: #bbb;
+  margin-top: 18px;
+  font-size: 0.9rem;
+}
+
+.link-log {
+  color: #6c63ff;
+  text-decoration: none;
+  font-weight: 600;
+  transition: 0.3s;
+}
+
+.link-log:hover {
+  color: #837bff;
+}
+
+.discribe-log{
+    display: flex;
+    justify-content: center;
+    margin-left: 0;
+}
+
+.link-log{
+    justify-content: center;
+    display: flex;
+    margin: 0 auto;
+}
 
 @media (max-width: 480px) {
   .Loginbox {
     margin: 30px 10px;
     padding: 20px 15px 30px;
+
   }
 
   .Enter {
@@ -82,6 +113,8 @@
     padding: 10px;
   }
 }
+
+
 
 
 @keyframes fadeIn {
